--- a/src/components/Futa/TickerComponent/TickerComponent.module.css
+++ b/src/components/Futa/TickerComponent/TickerComponent.module.css
@@ -312,13 +312,14 @@ cursor: pointer;
 
 
 .tooltipTitleDisplay{
-    border: 1px solid var(--text2);
+  
     padding: 8px;
-    font-size: 16px;
-    background: var(--dark2);
-    color: var(--text3);
+    font-size: 14px;
+    background: var(--dark3);
+    color: var(--text1);
     line-height: 1.2;
     text-transform: uppercase;
+    box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.25);
    
 }
 
