--- a/src/pages/platformFuta/Account/Account.module.css
+++ b/src/pages/platformFuta/Account/Account.module.css
@@ -178,14 +178,15 @@ transition: all var(--animation-speed) ease-in-out;
 
 
 .tooltipTitleDisplay{
-    border: 1px solid var(--text2);
+  
     padding: 8px;
-    font-size: 16px;
-    background: var(--dark2);
-    color: var(--text3);
+    font-size: 14px;
+    background: var(--dark3);
+    color: var(--text1);
     line-height: 1.2;
     text-transform: uppercase;
     margin-left: 50px;
+    box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.25);
    
 }
 @media (max-width: 780px) {
