--- a/src/pages/platformFuta/Create/Create.module.css
+++ b/src/pages/platformFuta/Create/Create.module.css
@@ -140,6 +140,35 @@
     gap: 8px;
 }
 
+.tooltipLabelContainer{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 4px;
+
+}
+
+
+.tooltipTitleDisplay{
+  
+    padding: 8px;
+    font-size: 14px;
+    background: var(--dark3);
+    color: var(--text1);
+    line-height: 1.2;
+    text-transform: uppercase;
+    margin-left: 50px;
+    box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.25);
+   
+}
+
+.justifyRow{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
 @media only screen and (min-width: 1080px) {
     .mainContainer{
         background: url('../../../assets//futa/images/synthwave.png') no-repeat ; 
