add dark1 bg to all pages

--- a/src/components/Futa/Footer/Footer.module.css
+++ b/src/components/Futa/Footer/Footer.module.css
@@ -32,6 +32,7 @@ font-family: var(--font-family)  !important;
 }
 
 .desktopContainer{
+    background: var(--dark1);
     width: 100%;
     position:fixed;
 bottom:0;
