--- a/src/pages/platformFuta/Auctions/Auctions.module.css
+++ b/src/pages/platformFuta/Auctions/Auctions.module.css
@@ -6,7 +6,8 @@
 
 .desktopContainer{
     padding: 0px 16px;
-    height: calc(100vh - 85px);
+    /* height: calc(100vh - 85px); */
+    
 
     
 }
