--- a/src/pages/platformFuta/Account/Account.module.css
+++ b/src/pages/platformFuta/Account/Account.module.css
@@ -1,6 +1,7 @@
 .container{
     width: 100%;
     height: calc(100svh - 154px);
+    background: var(--dark1);
    
    
 
@@ -95,6 +96,7 @@ transition: all var(--animation-speed) ease-in-out;
 
 /* desktop */
 .desktopContainer {
+    background: var(--dark1);
     display: grid;
     grid-template-columns: auto 4px 390px;
     padding: 0 16px;
