--- a/src/components/Futa/ProgressBar/ProgressBar.module.css
+++ b/src/components/Futa/ProgressBar/ProgressBar.module.css
@@ -1,16 +1,14 @@
 /* ProgressBar.module.css */
 .progressBarContainer {
     display: flex;
-    gap: 2px; /* Adjust the gap between bars as needed */
+    gap: 2px; 
 }
 
 .progressBar {
     width: 27.9px;
     height: 12px;
     background: var(--text1);
-    opacity: 0.5;
+  
 }
 
-.filled {
-    background: var(--text2);
-}
+
