create futa desktop

--- a/src/pages/platformFuta/Home/Home.module.css
+++ b/src/pages/platformFuta/Home/Home.module.css
@@ -10,7 +10,8 @@
     padding: 8px;
     overflow: hidden;
 
-    background: #040309;
+    /* background: #040309; */
+    background: #0A0B0D
 }
 
 .backgroundVideo {
