apply functional changes requested by Plume

--- a/src/index.css
+++ b/src/index.css
@@ -364,7 +364,7 @@
     --text2: #19222d;
     --text3: #0e131a;
 
-    --dark1: #e6eaf2;
+    --dark1: #e6f1f4;
     --dark2: #f6f6f7;
     --dark3: #eff1f4;
 
