--- a/src/components/Futa/Chart/Chart.module.css
+++ b/src/components/Futa/Chart/Chart.module.css
@@ -3,6 +3,13 @@
     flex-direction: column;
     gap: 8px;
 }
+
+
+
+.container svg:hover {
+    cursor: default;
+}
+
 .content{
     width: 100%;
     height: 100%;
