--- a/src/App/App.css
+++ b/src/App/App.css
@@ -7,7 +7,7 @@
     margin: 0;
     scroll-behavior: smooth;
     font-family: var(--font-family);
-    font-weight: 300;
+    font-weight: var(--fw-normal);
 
     /* outline: 1px solid red; */
 }
