--- a/src/components/Global/Modal/Modal.module.css
+++ b/src/components/Global/Modal/Modal.module.css
@@ -20,7 +20,7 @@
 
 .modal_body {
     border: solid 1px;
-    border-color: var(--accent1);
+    border-color: var(--color-border);
     background-origin: border-box;
     background-clip: content-box, border-box;
     box-shadow: 2px 2000px 1px var(--dark1) inset;
