--- a/src/pages/platformFuta/Auctions/Auctions.module.css
+++ b/src/pages/platformFuta/Auctions/Auctions.module.css
@@ -12,10 +12,6 @@
     
 }
 
-
-
-    
-
 .consoleChartComponent{
     display: grid;
     grid-template-columns: 30% 4px 1fr;
@@ -23,24 +19,22 @@
     
 }
 
-
-.auctionChartContainer{
+.auctionsTickerContainer {
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    
+    flex-direction: row;
+    width: 100%;
     height: 100%;
-    
-}
-
-.auctionsTickerContainer{
-    height: 100%;
-    display: grid;
+    /* display: grid; */
     gap: 1rem;
 }
 
+.auctionChartContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+}
 
-
-
-
-
+.auction_detail {
+    width: 390px;
+}
