--- a/src/components/Futa/ProgressBar/ProgressBar.module.css
+++ b/src/components/Futa/ProgressBar/ProgressBar.module.css
@@ -1,14 +1,11 @@
 /* ProgressBar.module.css */
 .progressBarContainer {
     display: flex;
-    gap: 2px; 
+    gap: 2px;
 }
 
 .progressBar {
     width: 27.9px;
     height: 12px;
-    background: var(--text1);
-  
+    background: var(--accent1);
 }
-
-
