--- a/src/pages/platformFuta/Auctions/Auctions.module.css
+++ b/src/pages/platformFuta/Auctions/Auctions.module.css
@@ -1,40 +1,28 @@
- .mobileContainer{
+.mobileContainer {
     padding: 8px 16px;
- 
-    
 }
 
-.desktopContainer{
+.desktopContainer {
     padding: 0px 16px;
     /* height: calc(100vh - 85px); */
-    
-
-    
 }
 
-.consoleChartComponent{
+.consoleChartComponent {
     display: grid;
     grid-template-columns: 30% 4px 1fr;
     gap: 8px;
-    
-}
-
-.auctionsTickerContainer {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    height: 100%;
-    /* display: grid; */
-    gap: 1rem;
 }
 
 .auctionChartContainer {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+
     height: 100%;
 }
 
-.auction_detail {
-    width: 390px;
+.auctionsTickerContainer {
+    height: 100%;
+    display: grid;
+    gap: 1rem;
 }
