--- a/src/pages/platformFuta/Auctions/Auctions.module.css
+++ b/src/pages/platformFuta/Auctions/Auctions.module.css
@@ -1,16 +1,20 @@
 .mobileContainer {
     padding: 8px 16px;
+    height: var(--content-height-mobile);
 }
 
 .desktopContainer {
     padding: 0px 16px;
+    height: 100%;
+    height: var(--content-height);
+    overflow-y: hidden;
     /* height: calc(100vh - 85px); */
 }
 
 .consoleChartComponent {
-    display: grid;
-    grid-template-columns: 30% 4px 1fr;
-    gap: 8px;
+
+    display: flex;
+    flex: 1;
 }
 
 .auctionChartContainer {
