--- a/src/components/Chat/ChatToaster/ChatToaster.module.css
+++ b/src/components/Chat/ChatToaster/ChatToaster.module.css
@@ -3,7 +3,6 @@
     transition: all .4s ease-in-out;
     width: 100%;
     opacity: 0;
-    z-index: 99;
     padding: 1rem;
     width: 80%;
     left: 10%;
@@ -14,14 +13,16 @@
     backdrop-filter: blur(8px);
     transform: translateY(0);
     background: rgba(22, 28, 38, 0.6);
-    transform: translateY(-100%);
-}
-
-
-
-.toastr_wrapper.active{
+    transform: scale(0) translateY(-100%);
+    z-index: -1;
+    }
     
-    transform: translateY(100%);
+    
+    
+    .toastr_wrapper.active{
+        z-index: 99;
+        
+    transform: scale(1) translateY(100%);
     opacity: 1;
 }
 
