chart and actions table hover synced

--- a/src/components/Futa/SearchableTicker/SearchableTicker.module.css
+++ b/src/components/Futa/SearchableTicker/SearchableTicker.module.css
@@ -245,7 +245,9 @@
     height: 100%;
 }
 .active{ background: #28585D; }
-
+.hoverActive {
+    background: var(--dark4);
+}
 .marketCap {
     text-align: end;
 }
