--- a/src/index.css
+++ b/src/index.css
@@ -219,6 +219,7 @@
     --grey-light-border: 1px solid var(--text2);
     --navbar-border: transparent;
     --dark-border: 0.2px solid #010101;
+    --navbar-bg: var(--dark1)
 
     /* transitions */
     --transition: all var(--animation-speed) ease-in-out;
@@ -356,6 +357,7 @@
     --swap-border: transparent;
     --navbar-border: #cacbcd;
     --dark-border: 0.2px solid #fefefe;
+    --navbar-bg: var(--dark1)
     --border: #cacbcd;
     --select: #acb6c4;
 }
