--- a/src/pages/Swap/Swap.module.css
+++ b/src/pages/Swap/Swap.module.css
@@ -45,7 +45,7 @@
 .arrow_container{
     width: 50px;
     height: 50px;
-    background: var(--accent2);
+    background: white;
     display: flex;
     flex-direction: row;
     justify-content: center;
