--- a/src/pages/platformFuta/SwapFuta/SwapFuta.module.css
+++ b/src/pages/platformFuta/SwapFuta/SwapFuta.module.css
@@ -10,22 +10,51 @@
 
 .chartSection{
     display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100%;
     height: 100%;
     background: var(--dark3);
+
+     background: linear-gradient(
+        90deg,
+        rgba(7, 7, 7, 0.1) 25%,
+        rgba(52, 45, 45, 0.2) 50%,
+        rgba(55, 53, 53, 0.1) 75%
+    );
+    background-size: 200% 100%;
+   
 }
 
-@media (max-width: 1200px) {
+.chartSection img{
+    max-width: 100%;
+    max-height: 100%;
+}
+
+/* @media (max-width: 800px) {
     .mainSection {
         display: flex;
         flex-direction: column;
     }
-}
+} */
 
 @media (max-width: 600px) {
     .mainSection {
         display: flex;
         flex-direction: column;
         gap: 4px;
+    }
+
+    .chartSection{
+        height: 130px;
+    }
+}
+
+@keyframes shimmer {
+    0% {
+        background-position: 100% 0;
+    }
+    100% {
+        background-position: -100% 0;
     }
 }
